# libBERT

./: .gitignore  CMakeLists.txt  ChangeLog.txt  LICENSE.txt  README.txt  config.h.cmake  libBERT.pc.cmake
include/: bert.h
include/bert/: buffer.h  data.h  decoder.h  dict.h  encoder.h  errno.h  list.h  magic.h  regex.h  tuple.h  types.h  util.h
modules/: install_paths.cmake
src/: bert.c  buffer.c  data.c  decoder.c  decoder_private.c  decoder_private.h  dict.c  encoder.c  errno.c  list.c  read.c  read.h  regex_private.c  regex_private.h  tuple.c  util.c
src/private/: data.c  data.h  decode.c  decode.h  decoder.c  decoder.h  encode.c  encode.h  encoder.c  encoder.h  regex.c
src/programs/: dump.c
src/utils/: dump.c
test/: CMakeLists.txt  run_tests.sh  test.c  test.h  test_buffer_clear.c  test_buffer_empty.c  test_buffer_init.c  test_buffer_length.c  test_buffer_read.c  test_buffer_read_big.c  test_buffer_read_small.c  test_buffer_small_read.c  test_buffer_small_write.c  test_buffer_write_big.c  test_buffer_write_small.c  test_decode_atom.c  test_decode_big_int.c  test_decode_bin.c  test_decode_dict.c  test_decode_false.c  test_decode_float.c  test_decode_large_bignum.c  test_decode_large_tuple.c  test_decode_list.c  test_decode_long_bin.c  test_decode_long_string.c  test_decode_nil.c  test_decode_regex.c  test_decode_small_bignum.c  test_decode_small_int.c  test_decode_small_tuple.c  test_decode_string.c  test_decode_time.c  test_decode_true.c  test_encode_atom.c  test_encode_big_tuple.c  test_encode_bin.c  test_encode_dict.c  test_encode_false.c  test_encode_float.c  (+17 more)
test/files/: atom.bert  big_int.bert  bin.bert  dict.bert  false.bert  float.bert  large_bignum.bert  large_tuple.bert  list.bert  long_bin.bert  long_list.bert  long_string.bert  nil.bert  regex.bert  small_bignum.bert  small_int.bert  string.bert  time.bert  true.bert
