enable_testing()

add_library(test STATIC test.c)

add_executable(test_decode_small_int test_decode_small_int.c)
target_link_libraries(test_decode_small_int test BERT)
add_test(decode_small_int test_decode_small_int)

add_executable(test_decode_big_int test_decode_big_int.c)
target_link_libraries(test_decode_big_int test BERT)
add_test(decode_big_int test_decode_big_int)

add_executable(test_decode_float test_decode_float.c)
target_link_libraries(test_decode_float test BERT)
add_test(decode_float test_decode_float)

add_executable(test_decode_atom test_decode_atom.c)
target_link_libraries(test_decode_atom test BERT)
add_test(decode_atom test_decode_atom)

add_executable(test_decode_string test_decode_string.c)
target_link_libraries(test_decode_string test BERT)
add_test(decode_string test_decode_string)

add_executable(test_decode_long_string test_decode_long_string.c)
target_link_libraries(test_decode_long_string test BERT)
add_test(decode_long_string test_decode_long_string)

add_executable(test_decode_bin test_decode_bin.c)
target_link_libraries(test_decode_bin test BERT)
add_test(decode_bin test_decode_bin)

add_executable(test_decode_long_bin test_decode_long_bin.c)
target_link_libraries(test_decode_long_bin test BERT)
add_test(decode_long_bin test_decode_long_bin)

add_executable(test_decode_small_tuple test_decode_small_tuple.c)
target_link_libraries(test_decode_small_tuple test BERT)
add_test(decode_small_tuple test_decode_small_tuple)

add_executable(test_decode_large_tuple test_decode_large_tuple.c)
target_link_libraries(test_decode_large_tuple test BERT)
add_test(decode_large_tuple test_decode_large_tuple)

add_executable(test_decode_list test_decode_list.c)
target_link_libraries(test_decode_list test BERT)
add_test(decode_list test_decode_list)

add_executable(test_decode_dict test_decode_dict.c)
target_link_libraries(test_decode_dict test BERT)
add_test(decode_dict test_decode_dict)

add_executable(test_decode_true test_decode_true.c)
target_link_libraries(test_decode_true test BERT)
add_test(decode_true test_decode_true)

add_executable(test_decode_false test_decode_false.c)
target_link_libraries(test_decode_false test BERT)
add_test(decode_false test_decode_false)

add_executable(test_decode_nil test_decode_nil.c)
target_link_libraries(test_decode_nil test BERT)
add_test(decode_nil test_decode_nil)

add_executable(test_decode_regex test_decode_regex.c)
target_link_libraries(test_decode_regex test BERT)
add_test(decode_regex test_decode_regex)

add_executable(test_encode_magic test_encode_magic.c)
target_link_libraries(test_encode_magic test BERT)
add_test(encode_magic test_encode_magic)
