enable_testing()

add_library(test STATIC test.c)

add_executable(test_decode_small_int test_decode_small_int.c)
target_link_libraries(test_decode_small_int test BERT)
add_test(decode_small_int test_decode_small_int)

add_executable(test_decode_big_int test_decode_big_int.c)
target_link_libraries(test_decode_big_int test BERT)
add_test(decode_big_int test_decode_big_int)

add_executable(test_decode_float test_decode_float.c)
target_link_libraries(test_decode_float test BERT)
add_test(decode_float test_decode_float)

add_executable(test_decode_atom test_decode_atom.c)
target_link_libraries(test_decode_atom test BERT)
add_test(decode_atom test_decode_atom)

add_executable(test_decode_string test_decode_string.c)
target_link_libraries(test_decode_string test BERT)
add_test(decode_string test_decode_string)

add_executable(test_decode_long_string test_decode_long_string.c)
target_link_libraries(test_decode_long_string test BERT)
add_test(decode_long_string test_decode_long_string)

add_executable(test_decode_bin test_decode_bin.c)
target_link_libraries(test_decode_bin test BERT)
add_test(decode_bin test_decode_bin)

add_executable(test_decode_long_bin test_decode_long_bin.c)
target_link_libraries(test_decode_long_bin test BERT)
add_test(decode_long_bin test_decode_long_bin)

add_executable(test_decode_small_tuple test_decode_small_tuple.c)
target_link_libraries(test_decode_small_tuple test BERT)
add_test(decode_small_tuple test_decode_small_tuple)

add_executable(test_decode_large_tuple test_decode_large_tuple.c)
target_link_libraries(test_decode_large_tuple test BERT)
add_test(decode_large_tuple test_decode_large_tuple)

add_executable(test_decode_list test_decode_list.c)
target_link_libraries(test_decode_list test BERT)
add_test(decode_list test_decode_list)

add_executable(test_decode_dict test_decode_dict.c)
target_link_libraries(test_decode_dict test BERT)
add_test(decode_dict test_decode_dict)

add_executable(test_decode_true test_decode_true.c)
target_link_libraries(test_decode_true test BERT)
add_test(decode_true test_decode_true)

add_executable(test_decode_false test_decode_false.c)
target_link_libraries(test_decode_false test BERT)
add_test(decode_false test_decode_false)

add_executable(test_decode_nil test_decode_nil.c)
target_link_libraries(test_decode_nil test BERT)
add_test(decode_nil test_decode_nil)

add_executable(test_decode_time test_decode_time.c)
target_link_libraries(test_decode_time test BERT)
add_test(decode_time test_decode_time)

add_executable(test_decode_regex test_decode_regex.c)
target_link_libraries(test_decode_regex test BERT)
add_test(decode_regex test_decode_regex)

add_executable(test_encode_magic test_encode_magic.c)
target_link_libraries(test_encode_magic test BERT)
add_test(encode_magic test_encode_magic)

add_executable(test_encode_short_write test_encode_short_write.c)
target_link_libraries(test_encode_short_write test BERT)
add_test(encode_short_wirte test_encode_short_write)

add_executable(test_encode_small_int test_encode_small_int.c)
target_link_libraries(test_encode_small_int test BERT)
add_test(encode_small_int test_encode_small_int)

add_executable(test_encode_int test_encode_int.c)
target_link_libraries(test_encode_int test BERT)
add_test(encode_int test_encode_int)

add_executable(test_encode_small_bignum test_encode_small_bignum.c)
target_link_libraries(test_encode_small_bignum test BERT)
add_test(encode_small_bignum test_encode_small_bignum)

add_executable(test_encode_float test_encode_float.c)
target_link_libraries(test_encode_float test BERT)
add_test(encode_float test_encode_float)

add_executable(test_encode_atom test_encode_atom.c)
target_link_libraries(test_encode_atom test BERT)
add_test(encode_atom test_encode_atom)

add_executable(test_encode_string test_encode_string.c)
target_link_libraries(test_encode_string test BERT)
add_test(encode_string test_encode_string)

add_executable(test_encode_bin test_encode_bin.c)
target_link_libraries(test_encode_bin test BERT)
add_test(encode_bin test_encode_bin)

add_executable(test_encode_small_tuple test_encode_small_tuple.c)
target_link_libraries(test_encode_small_tuple test BERT)
add_test(encode_small_tuple test_encode_small_tuple)

add_executable(test_encode_big_tuple test_encode_big_tuple.c)
target_link_libraries(test_encode_big_tuple test BERT)
add_test(encode_big_tuple test_encode_big_tuple)

add_executable(test_encode_list test_encode_list.c)
target_link_libraries(test_encode_list test BERT)
add_test(encode_list test_encode_list)

add_executable(test_encode_true test_encode_true.c)
target_link_libraries(test_encode_true test BERT)
add_test(encode_true test_encode_true)

add_executable(test_encode_false test_encode_false.c)
target_link_libraries(test_encode_false test BERT)
add_test(encode_false test_encode_false)

add_executable(test_encode_nil test_encode_nil.c)
target_link_libraries(test_encode_nil test BERT)
add_test(encode_nil test_encode_nil)

add_executable(test_encode_dict test_encode_dict.c)
target_link_libraries(test_encode_dict test BERT)
add_test(encode_dict test_encode_dict)

add_executable(test_encode_time test_encode_time.c)
target_link_libraries(test_encode_time test BERT)
add_test(encode_time test_encode_time)

add_executable(test_encode_regex test_encode_regex.c)
target_link_libraries(test_encode_regex test BERT)
add_test(encode_regex test_encode_regex)
